--- a/Sources/Localization/Localizable.xcstrings
+++ b/Sources/Localization/Localizable.xcstrings
@@ -571,6 +571,7 @@
       }
     },
     "Next" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -706,6 +707,7 @@
       }
     },
     "Previous" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
