--- a/Sources/Localization/Localizable.xcstrings
+++ b/Sources/Localization/Localizable.xcstrings
@@ -1597,6 +1597,24 @@
           }
         }
       }
+    },
+    "发生错误" : {
+
+    },
+    "名称" : {
+
+    },
+    "唤醒车辆" : {
+
+    },
+    "更新数据" : {
+
+    },
+    "状态" : {
+
+    },
+    "车辆详情" : {
+
     }
   },
   "version" : "1.0"
